--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "pololu-motoron"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+name = "version"
+
 [dependencies]
 i2cdev = "0.6.1"
 thiserror = "2.0.11"
+anyhow = "1.0.95"
