--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,13 @@
+[workspace]
+members = [
+  "bins",
+]
+
 [package]
 name = "pololu-motoron"
 version = "0.1.0"
 edition = "2021"
 
-[[bin]]
-name = "version"
-
 [dependencies]
-i2cdev = "0.6.1"
-thiserror = "2.0.11"
-anyhow = "1.0.95"
+i2cdev = "0.6"
+thiserror = "2.0"
